[gd_scene load_steps=60 format=4 uid="uid://dj4sm4nitefcd"]

[ext_resource type="Texture2D" uid="uid://d0bxchvubu4d6" path="res://assets/tileset/world_tileset.png" id="1_55use"]
[ext_resource type="Script" uid="uid://xj7g3bghiydf" path="res://script/player.gd" id="2_s3831"]
[ext_resource type="PackedScene" uid="uid://o86i438iy7pu" path="res://scene/coin_ui.tscn" id="3_1o5tb"]
[ext_resource type="Texture2D" uid="uid://bvtn7xo6k6vqa" path="res://assets/character/player/idle/1.png" id="4_h5nn7"]
[ext_resource type="Texture2D" uid="uid://d3prysmutkdhp" path="res://assets/character/player/idle/2.png" id="5_3k0a5"]
[ext_resource type="Texture2D" uid="uid://blb8y1lfwsl1x" path="res://assets/character/player/idle/3.png" id="6_sfyl0"]
[ext_resource type="Texture2D" uid="uid://5f1upxrdwlnp" path="res://assets/character/player/idle/4.png" id="7_i6d00"]
[ext_resource type="Texture2D" uid="uid://bp5q8uph1u4ox" path="res://assets/character/player/idle/5.png" id="8_cfpwh"]
[ext_resource type="Texture2D" uid="uid://ddhtlco62dprm" path="res://assets/character/player/idle/6.png" id="9_b3pny"]
[ext_resource type="Texture2D" uid="uid://ckhx1scnprgva" path="res://assets/character/player/idle/7.png" id="10_ey7ih"]
[ext_resource type="Texture2D" uid="uid://bdfpfgqu2h6fg" path="res://assets/character/player/idle/8.png" id="11_6qv56"]
[ext_resource type="Texture2D" uid="uid://syujv2ig8yyn" path="res://assets/character/player/idle/9.png" id="12_3cdi5"]
[ext_resource type="Texture2D" uid="uid://cvbjkyxc6agb8" path="res://assets/character/player/idle/10.png" id="13_ixv7a"]
[ext_resource type="Texture2D" uid="uid://cyhdmep3xahl6" path="res://assets/character/player/idle/11.png" id="14_4dox8"]
[ext_resource type="Texture2D" uid="uid://cxsxtsi8cwm8l" path="res://assets/character/player/idle/12.png" id="15_jmprf"]
[ext_resource type="Texture2D" uid="uid://br4kpmvbai0cj" path="res://assets/character/player/idle/13.png" id="16_ifk0n"]
[ext_resource type="Texture2D" uid="uid://cgsx3rq8urga1" path="res://assets/character/player/idle/14.png" id="17_b3mpq"]
[ext_resource type="Texture2D" uid="uid://b1qjxwn463q42" path="res://assets/character/player/idle/15.png" id="18_ww7wy"]
[ext_resource type="Texture2D" uid="uid://c2xxxtmsfc76v" path="res://assets/character/player/idle/16.png" id="19_lncac"]
[ext_resource type="Texture2D" uid="uid://cdjb0xjnlf2sj" path="res://assets/character/player/idle/17.png" id="20_4iesq"]
[ext_resource type="Texture2D" uid="uid://b6mnkl5h1hoqn" path="res://assets/character/player/idle/18.png" id="21_0qk11"]
[ext_resource type="Texture2D" uid="uid://bhl2ypj671gjp" path="res://assets/character/player/idle/19.png" id="22_0wn7w"]
[ext_resource type="Texture2D" uid="uid://bong0jw3fylpm" path="res://assets/character/player/idle/20.png" id="23_6veoo"]
[ext_resource type="Texture2D" uid="uid://cqqtov5rlwlli" path="res://assets/character/player/idle/21.png" id="24_1npb3"]
[ext_resource type="Texture2D" uid="uid://keoqshd2q300" path="res://assets/character/player/idle/22.png" id="25_0yrtl"]
[ext_resource type="Texture2D" uid="uid://djibuhtf8m41m" path="res://assets/character/player/idle/23.png" id="26_2e34m"]
[ext_resource type="Texture2D" uid="uid://b2da7mystbp73" path="res://assets/character/player/idle/24.png" id="27_xi3sw"]
[ext_resource type="Texture2D" uid="uid://dcdkovttays1q" path="res://assets/character/player/idle/25.png" id="28_kaieq"]
[ext_resource type="Texture2D" uid="uid://2jyw7att3rcu" path="res://assets/character/player/idle/26.png" id="29_s13bp"]
[ext_resource type="Texture2D" uid="uid://ed6ekuh7ct0y" path="res://assets/character/player/jump/1.png" id="30_yc2jw"]
[ext_resource type="Texture2D" uid="uid://ca0xbh7le4w8l" path="res://assets/character/player/jump/2.png" id="31_px31k"]
[ext_resource type="Texture2D" uid="uid://b6yimf5on0vud" path="res://assets/character/player/jump/3.png" id="32_xbmu7"]
[ext_resource type="Texture2D" uid="uid://dbw3gcb8xim0" path="res://assets/character/player/jump/4.png" id="33_2a62a"]
[ext_resource type="Texture2D" uid="uid://dhqhy28ep3sv2" path="res://assets/character/player/run/1.png" id="34_vf83d"]
[ext_resource type="Texture2D" uid="uid://dwnisdanp0xtt" path="res://assets/character/player/run/2.png" id="35_y6oae"]
[ext_resource type="Texture2D" uid="uid://bfxs2fw0fc8rf" path="res://assets/character/player/run/3.png" id="36_qo6cw"]
[ext_resource type="Texture2D" uid="uid://bpidh6ku8g6c1" path="res://assets/character/player/run/4.png" id="37_oyq3b"]
[ext_resource type="Texture2D" uid="uid://ck4nesx6rt0wb" path="res://assets/character/player/run/5.png" id="38_8x75y"]
[ext_resource type="Texture2D" uid="uid://bh6h6ub02uie2" path="res://assets/character/player/run/6.png" id="39_gi7c2"]
[ext_resource type="Texture2D" uid="uid://d4duhfikcgqu4" path="res://assets/character/player/run/7.png" id="40_qlqcd"]
[ext_resource type="Texture2D" uid="uid://dw8cxf4ia23t8" path="res://assets/character/player/run/8.png" id="41_2k337"]
[ext_resource type="Texture2D" uid="uid://dssa76b1wdbsl" path="res://assets/character/player/run/9.png" id="42_34dg7"]
[ext_resource type="Texture2D" uid="uid://ca1wfh788wge4" path="res://assets/character/player/run/10.png" id="43_62yws"]
[ext_resource type="Texture2D" uid="uid://c3eupnwv486tg" path="res://assets/character/player/run/11.png" id="44_agf15"]
[ext_resource type="Texture2D" uid="uid://b8jc6oc40beld" path="res://assets/character/player/run/12.png" id="45_7puek"]
[ext_resource type="Texture2D" uid="uid://lgcup4lyhh2a" path="res://assets/character/player/run/13.png" id="46_0pwap"]
[ext_resource type="Texture2D" uid="uid://oy8eftr7mghf" path="res://assets/character/player/run/14.png" id="47_53ppr"]
[ext_resource type="Script" uid="uid://dqpf47lqrgx6i" path="res://script/countdown.gd" id="48_rrj8w"]
[ext_resource type="Script" uid="uid://l3ct7uywg7jk" path="res://script/kill_zone.gd" id="49_illia"]
[ext_resource type="Script" uid="uid://2aimhwn1gpsg" path="res://script/camera_2d.gd" id="49_s3831"]
[ext_resource type="PackedScene" uid="uid://d4b5tqksasbob" path="res://scene/coin.tscn" id="50_yj85f"]
[ext_resource type="Script" uid="uid://ci7d6n471jk40" path="res://script/game_over.gd" id="52_1o5tb"]
[ext_resource type="Script" uid="uid://b1intc5dvlh8m" path="res://script/next_level.gd" id="53_h5nn7"]
[ext_resource type="Script" uid="uid://b3bhb15sn5pft" path="res://script/controller.gd" id="54_3k0a5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_55use"]
texture = ExtResource("1_55use")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_aosfd"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_55use")

[sub_resource type="SpriteFrames" id="SpriteFrames_tuhsn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h5nn7")
}, {
"duration": 1.0,
"texture": ExtResource("5_3k0a5")
}, {
"duration": 1.0,
"texture": ExtResource("6_sfyl0")
}, {
"duration": 1.0,
"texture": ExtResource("7_i6d00")
}, {
"duration": 1.0,
"texture": ExtResource("8_cfpwh")
}, {
"duration": 1.0,
"texture": ExtResource("9_b3pny")
}, {
"duration": 1.0,
"texture": ExtResource("10_ey7ih")
}, {
"duration": 1.0,
"texture": ExtResource("11_6qv56")
}, {
"duration": 1.0,
"texture": ExtResource("12_3cdi5")
}, {
"duration": 1.0,
"texture": ExtResource("13_ixv7a")
}, {
"duration": 1.0,
"texture": ExtResource("14_4dox8")
}, {
"duration": 1.0,
"texture": ExtResource("15_jmprf")
}, {
"duration": 1.0,
"texture": ExtResource("16_ifk0n")
}, {
"duration": 1.0,
"texture": ExtResource("17_b3mpq")
}, {
"duration": 1.0,
"texture": ExtResource("18_ww7wy")
}, {
"duration": 1.0,
"texture": ExtResource("19_lncac")
}, {
"duration": 1.0,
"texture": ExtResource("20_4iesq")
}, {
"duration": 1.0,
"texture": ExtResource("21_0qk11")
}, {
"duration": 1.0,
"texture": ExtResource("22_0wn7w")
}, {
"duration": 1.0,
"texture": ExtResource("23_6veoo")
}, {
"duration": 1.0,
"texture": ExtResource("24_1npb3")
}, {
"duration": 1.0,
"texture": ExtResource("25_0yrtl")
}, {
"duration": 1.0,
"texture": ExtResource("26_2e34m")
}, {
"duration": 1.0,
"texture": ExtResource("27_xi3sw")
}, {
"duration": 1.0,
"texture": ExtResource("28_kaieq")
}, {
"duration": 1.0,
"texture": ExtResource("29_s13bp")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_yc2jw")
}, {
"duration": 1.0,
"texture": ExtResource("31_px31k")
}, {
"duration": 1.0,
"texture": ExtResource("32_xbmu7")
}, {
"duration": 1.0,
"texture": ExtResource("33_2a62a")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_vf83d")
}, {
"duration": 1.0,
"texture": ExtResource("35_y6oae")
}, {
"duration": 1.0,
"texture": ExtResource("36_qo6cw")
}, {
"duration": 1.0,
"texture": ExtResource("37_oyq3b")
}, {
"duration": 1.0,
"texture": ExtResource("38_8x75y")
}, {
"duration": 1.0,
"texture": ExtResource("39_gi7c2")
}, {
"duration": 1.0,
"texture": ExtResource("40_qlqcd")
}, {
"duration": 1.0,
"texture": ExtResource("41_2k337")
}, {
"duration": 1.0,
"texture": ExtResource("42_34dg7")
}, {
"duration": 1.0,
"texture": ExtResource("43_62yws")
}, {
"duration": 1.0,
"texture": ExtResource("44_agf15")
}, {
"duration": 1.0,
"texture": ExtResource("45_7puek")
}, {
"duration": 1.0,
"texture": ExtResource("46_0pwap")
}, {
"duration": 1.0,
"texture": ExtResource("47_53ppr")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lahxr"]
radius = 20.0
height = 60.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qw00t"]
distance = -710.0

[node name="Level1" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(77, 83)
tile_map_data = PackedByteArray("AAAAAAsAAAAEAAAAAAAAAAwAAAAEAAAAAAAAAAoAAAAEAAAAAAAAAAkAAAAEAAAAAAAAAAgAAAAEAAAAAAAAAAcAAAAEAAAAAAAAAA0AAAAEAAAAAAAAAA4AAAAEAAAAAAAAAA8AAAAEAAAAAAAAABAAAAAEAAAAAAAAABEAAAAEAAAAAAAAABIAAAAEAAAAAAAAABMAAAAEAAAAAAAAABQAAAAEAAAAAAAAABUAAAAEAAAAAAAAABYAAAAEAAAAAAAAABcAAAAEAAAAAAAAABgAAAAEAAAAAAAAABkAAAAEAAAAAAAAABoAAAAEAAAAAAAAABsAAAAEAAAAAAAAABwAAAAEAAAAAAAAAB0AAAAEAAAAAAAAAB4AAAAEAAAAAAAAAB8AAAAEAAAAAAAAACAAAAAEAAAAAAAAACEAAAAEAAAAAAAAACIAAAAEAAAAAAAAACMAAAAEAAAAAAAAACQAAAAEAAAAAAAAACUAAAAEAAAAAAAAACYAAAAEAAAAAAAAACcAAAAEAAAAAAAAACgAAAAEAAAAAAAAACwAAAAEAAAAAAAAAC0AAAAEAAAAAAAAAC4AAAAEAAAAAAAAAC8AAAAEAAAAAAAAADAAAAAEAAAAAAAAADEAAAAEAAAAAAAAADIAAAAEAAAAAAAAADMAAAAEAAAAAAAAADQAAAAEAAAAAAABADQAAAAEAAAAAAACADQAAAAEAAAAAAADADQAAAAEAAAAAAAEADQAAAAEAAAAAAAHADQAAAAEAAAAAAAGADQAAAAEAAAAAAAFADQAAAAEAAAAAAAIADQAAAAEAAAAAAAJADQAAAAEAAAAAAAKADQAAAAEAAAAAAALADQAAAAEAAAAAAAMADQAAAAEAAAAAAANADQAAAAEAAAAAAAOADQAAAAEAAAAAAAPADQAAAAEAAAAAAAQADQAAAAEAAAAAAARADQAAAAEAAAAAAASADQAAAAEAAAAAAATADQAAAAEAAAAAAAUADQAAAAEAAAAAAAVADQAAAAEAAAAAAAWADQAAAAEAAAAAAAXADQAAAAEAAAAAAAYADQAAAAEAAAAAAAZADQAAAAEAAAAAAAaADQAAAAEAAAAAAAbADQAAAAEAAAAAAAcADQAAAAEAAAAAAAdADQAAAAEAAAAAAAeADQAAAAEAAAAAAAfADQAAAAEAAAAAAAgADQAAAAEAAAAAAAhADQAAAAEAAAAAAAiADQAAAAEAAAAAAAjADQAAAAEAAAAAAAkADQAAAAEAAAAAAAlADQAAAAEAAAAAAAmADQAAAAEAAAAAAAnADQAAAAEAAAAAAAoADQAAAAEAAAAAAApADQAAAAEAAAAAAAqADQAAAAEAAAAAAArADQAAAAEAAAAAAAsADQAAAAEAAAAAAAtADQAAAAEAAAAAAAuADQAAAAEAAAAAAAvADQAAAAEAAAAAAAwADQAAAAEAAAAAAAxADQAAAAEAAAAAAAyADQAAAAEAAAAAAAzADQAAAAEAAAAAAA0ADQAAAAEAAAAAAA1ADQAAAAEAAAAAAA2ADQAAAAEAAAAAAA3ADQAAAAEAAAAAAA4ADQAAAAEAAAAAAA5ADQAAAAEAAAAAAA6ADQAAAAEAAAAAAA7ADQAAAAEAAAAAAA8ADQAAAAEAAAAAAA9ADQAAAAEAAAAAAA+ADQAAAAEAAAAAAA/ADQAAAAEAAAAAABAADQAAAAEAAAAAABBADQAAAAEAAAAAABCADQAAAAEAAAAAABDADQAAAAEAAAAAABEADQAAAAEAAAAAABFADQAAAAEAAAAAABGADQAAAAEAAAAAABHADQAAAAEAAAAAABIADQAAAAEAAAAAABJADQAAAAEAAAAAABKADQAAAAEAAAAAABLADQAAAAEAAAAAABMADQAAAAEAAAAAABNADQAAAAEAAAAAABOADQAAAAEAAAAAABPADQAAAAEAAAAAABQADQAAAAEAAAAAABRADQAAAAEAAAAAABSADQAAAAEAAAAAABTADQAAAAEAAAAAABUADQAAAAEAAAAAABVADQAAAAEAAAAAABWADQAAAAEAAAAAABXADQAAAAEAAAAAABYADQAAAAEAAAAAABZADQAAAAEAAAAAABaABwAAAAEAAAAAABZABwAAAAEAAAAAABaADQAAAAEAAAAAABbADQAAAAEAAAAAABcADQAAAAEAAAAAABdADQAAAAEAAAAAABeADQAAAAEAAAAAABfADQAAAAEAAAAAABgADQAAAAEAAAAAABhADQAAAAEAAAAAABiADQAAAAEAAAAAABjADQAAAAEAAAAAABkADQAAAAEAAAAAABlADQAAAAEAAAAAABmADQAAAAEAAAAAABnADQAAAAEAAAAAABoADQAAAAEAAAAAABpADQAAAAEAAAAAABqADQAAAAEAAAAAABrADQAAAAEAAAAAABsADQAAAAEAAAAAABtADQAAAAEAAAAAABuADQAAAAEAAAAAABvADQAAAAEAAAAAABwADQAAAAEAAAAAABxADQAAAAEAAAAAABxADMAAAAEAAAAAABxADIAAAAEAAAAAABxADEAAAAEAAAAAABxADAAAAAEAAAAAABxAC8AAAAEAAAAAABxAC4AAAAEAAAAAABxAC0AAAAEAAAAAABxACwAAAAEAAAAAABxACsAAAAEAAAAAABxACoAAAAEAAAAAABxACkAAAAEAAAAAABxACgAAAAEAAAAAABxACcAAAAEAAAAAABxACYAAAAEAAAAAABwABwAAAAEAAAAAABxACIAAAAEAAAAAABxACMAAAAEAAAAAABxACQAAAAEAAAAAABxACUAAAAEAAAAAABxABoAAAAEAAAAAABxABsAAAAEAAAAAABxABwAAAAEAAAAAABxAB0AAAAEAAAAAABxAB4AAAAEAAAAAABxAB8AAAAEAAAAAABxACEAAAAEAAAAAABxACAAAAAEAAAAAABxABkAAAAEAAAAAABxABgAAAAEAAAAAABxABcAAAAEAAAAAABxABYAAAAEAAAAAABxABAAAAAEAAAAAABxABEAAAAEAAAAAABxABIAAAAEAAAAAABxABMAAAAEAAAAAABxABQAAAAEAAAAAABxABUAAAAEAAAAAABxAA8AAAAEAAAAAABxAA4AAAAEAAAAAABxAA0AAAAEAAAAAABxAAwAAAAEAAAAAABxAAsAAAAEAAAAAABxAAoAAAAEAAAAAABxAAkAAAAEAAAAAABxAAgAAAAEAAAAAABxAAcAAAAEAAAAAABxAAYAAAAEAAAAAABxAAUAAAAEAAAAAABwAAUAAAAEAAAAAABvAAUAAAAEAAAAAABuAAUAAAAEAAAAAABtAAUAAAAEAAAAAABsAAUAAAAEAAAAAABrAAUAAAAEAAAAAABqAAUAAAAEAAAAAABpAAUAAAAEAAAAAABoAAUAAAAEAAAAAABnAAUAAAAEAAAAAABmAAUAAAAEAAAAAABjAAUAAAAEAAAAAABiAAUAAAAEAAAAAABhAAUAAAAEAAAAAABgAAUAAAAEAAAAAABfAAUAAAAEAAAAAABeAAUAAAAEAAAAAABkAAUAAAAEAAAAAABlAAUAAAAEAAAAAABdAAUAAAAEAAAAAABcAAUAAAAEAAAAAABbAAUAAAAEAAAAAABaAAUAAAAEAAAAAABZAAUAAAAEAAAAAABYAAUAAAAEAAAAAABXAAUAAAAEAAAAAABWAAUAAAAEAAAAAABVAAUAAAAEAAAAAABUAAUAAAAEAAAAAABTAAUAAAAEAAAAAABSAAUAAAAEAAAAAABRAAUAAAAEAAAAAABQAAUAAAAEAAAAAABPAAUAAAAEAAAAAABOAAUAAAAEAAAAAABNAAUAAAAEAAAAAABMAAUAAAAEAAAAAABLAAUAAAAEAAAAAABKAAUAAAAEAAAAAABJAAUAAAAEAAAAAABIAAUAAAAEAAAAAABHAAUAAAAEAAAAAABGAAUAAAAEAAAAAABFAAUAAAAEAAAAAABEAAUAAAAEAAAAAABDAAUAAAAEAAAAAABCAAUAAAAEAAAAAABBAAUAAAAEAAAAAABAAAUAAAAEAAAAAAA/AAUAAAAEAAAAAAA+AAUAAAAEAAAAAAA9AAUAAAAEAAAAAAA8AAUAAAAEAAAAAAA7AAUAAAAEAAAAAAA6AAUAAAAEAAAAAAA5AAUAAAAEAAAAAAA4AAUAAAAEAAAAAAA3AAUAAAAEAAAAAAA2AAUAAAAEAAAAAAA1AAUAAAAEAAAAAAA0AAUAAAAEAAAAAAAzAAUAAAAEAAAAAAAyAAUAAAAEAAAAAAAxAAUAAAAEAAAAAAAwAAUAAAAEAAAAAAAvAAUAAAAEAAAAAAAuAAUAAAAEAAAAAAAtAAUAAAAEAAAAAAAsAAUAAAAEAAAAAAArAAUAAAAEAAAAAAAqAAUAAAAEAAAAAAApAAUAAAAEAAAAAAAoAAUAAAAEAAAAAAAnAAUAAAAEAAAAAAAmAAUAAAAEAAAAAAAlAAUAAAAEAAAAAAAkAAUAAAAEAAAAAAAjAAUAAAAEAAAAAAAiAAUAAAAEAAAAAAAhAAUAAAAEAAAAAAAgAAUAAAAEAAAAAAAfAAUAAAAEAAAAAAAeAAUAAAAEAAAAAAAdAAUAAAAEAAAAAAAcAAUAAAAEAAAAAAAbAAUAAAAEAAAAAAAaAAUAAAAEAAAAAAAZAAUAAAAEAAAAAAAYAAUAAAAEAAAAAAAXAAUAAAAEAAAAAAAWAAUAAAAEAAAAAAAVAAUAAAAEAAAAAAAUAAUAAAAEAAAAAAATAAUAAAAEAAAAAAASAAUAAAAEAAAAAAARAAUAAAAEAAAAAAAQAAUAAAAEAAAAAAAPAAUAAAAEAAAAAAAOAAUAAAAEAAAAAAANAAUAAAAEAAAAAAAMAAUAAAAEAAAAAAALAAUAAAAEAAAAAAAKAAUAAAAEAAAAAAAJAAUAAAAEAAAAAAAIAAUAAAAEAAAAAAAHAAUAAAAEAAAAAAAGAAUAAAAEAAAAAAAFAAUAAAAEAAAAAAAEAAUAAAAEAAAAAAADAAUAAAAEAAAAAAACAAUAAAAEAAAAAAABAAUAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAABABwAAAAEAAAAAAACABwAAAAEAAAAAAADABwAAAAEAAAAAAAEABwAAAAEAAAAAAAFABwAAAAEAAAAAAAGABwAAAAEAAAAAAAHABwAAAAEAAAAAAAIABwAAAAEAAAAAAAJABwAAAAEAAAAAAAUABwAAAAEAAAAAAATABwAAAAEAAAAAAASABwAAAAEAAAAAAARABwAAAAEAAAAAAAQABwAAAAEAAAAAAAPABwAAAAEAAAAAAAOABwAAAAEAAAAAAANABwAAAAEAAAAAAAMABwAAAAEAAAAAAALABwAAAAEAAAAAAAKABwAAAAEAAAAAAAVABwAAAAEAAAAAAAWABwAAAAEAAAAAAAXABwAAAAEAAAAAAAYABwAAAAEAAAAAAAZABwAAAAEAAAAAAAaABwAAAAEAAAAAAAbABwAAAAEAAAAAAAcABwAAAAEAAAAAAAdABwAAAAEAAAAAAAeABwAAAAEAAAAAAAfABwAAAAEAAAAAAAgABwAAAAEAAAAAAAhABwAAAAEAAAAAAAiABwAAAAEAAAAAAAjABwAAAAEAAAAAAAkABwAAAAEAAAAAAAlABwAAAAEAAAAAAAmABwAAAAEAAAAAAAnABwAAAAEAAAAAAAoABwAAAAEAAAAAAApABwAAAAEAAAAAAAqABwAAAAEAAAAAAArABwAAAAEAAAAAAAsABwAAAAEAAAAAAAtABwAAAAEAAAAAAAuABwAAAAEAAAAAAAvABwAAAAEAAAAAAAwABwAAAAEAAAAAAAxABwAAAAEAAAAAAAyABwAAAAEAAAAAAAzABwAAAAEAAAAAAA0ABwAAAAEAAAAAAA1ABwAAAAEAAAAAAA2ABwAAAAEAAAAAAA3ABwAAAAEAAAAAAA4ABwAAAAEAAAAAAA5ABwAAAAEAAAAAAA9ABwAAAAEAAAAAAA8ABwAAAAEAAAAAAA7ABwAAAAEAAAAAAA6ABwAAAAEAAAAAAA+ABwAAAAEAAAAAAA/ABwAAAAEAAAAAABAABwAAAAEAAAAAABBABwAAAAEAAAAAABCABwAAAAEAAAAAABDABwAAAAEAAAAAABEABwAAAAEAAAAAABFABwAAAAEAAAAAABGABwAAAAEAAAAAABHABwAAAAEAAAAAABIABwAAAAEAAAAAABJABwAAAAEAAAAAABKABwAAAAEAAAAAABLABwAAAAEAAAAAABMABwAAAAEAAAAAABNABwAAAAEAAAAAABOABwAAAAEAAAAAABUABwAAAAEAAAAAABPABwAAAAEAAAAAABTABwAAAAEAAAAAABSABwAAAAEAAAAAABRABwAAAAEAAAAAABQABwAAAAEAAAAAABVABwAAAAEAAAAAABWABwAAAAEAAAAAABXABwAAAAEAAAAAABYABwAAAAEAAAAAABbABwAAAAEAAAAAABcABwAAAAEAAAAAABdABwAAAAEAAAAAABeABwAAAAEAAAAAABjABwAAAAEAAAAAABkABwAAAAEAAAAAABlABwAAAAEAAAAAABiABwAAAAEAAAAAABhABwAAAAEAAAAAABgABwAAAAEAAAAAABfABwAAAAEAAAAAABmABwAAAAEAAAAAABnABwAAAAEAAAAAABoABwAAAAEAAAAAABpABwAAAAEAAAAAABuABwAAAAEAAAAAABtABwAAAAEAAAAAABsABwAAAAEAAAAAABrABwAAAAEAAAAAABqABwAAAAEAAAAAABvABwAAAAEAAAAAAAAACsAAAAEAAAAAAAAACoAAAAEAAAAAAAAACkAAAAEAAAAAAAwABsAAAAEAAAAAAAxABsAAAAEAAAAAAAyABsAAAAEAAAAAAAwABoAAAAEAAAAAAAxABoAAAAEAAAAAAAyABoAAAAEAAAAAAAwABkAAAAEAAAAAAAxABkAAAAEAAAAAAAyABkAAAAEAAAAAAA4ABsAAAAEAAAAAAA5ABsAAAAEAAAAAAA6ABsAAAAEAAAAAAA4ABoAAAAEAAAAAAA5ABoAAAAEAAAAAAA6ABoAAAAEAAAAAAA4ABkAAAAEAAAAAAA5ABkAAAAEAAAAAAA6ABkAAAAEAAAAAAA4ABgAAAAEAAAAAAA5ABgAAAAEAAAAAAA6ABgAAAAEAAAAAAA4ABcAAAAEAAAAAAA5ABcAAAAEAAAAAAA6ABcAAAAEAAAAAAA4ABYAAAAEAAAAAAA5ABYAAAAEAAAAAAA6ABYAAAAEAAAAAABAABsAAAAEAAAAAABBABsAAAAEAAAAAABCABsAAAAEAAAAAABAABoAAAAEAAAAAABBABoAAAAEAAAAAABCABoAAAAEAAAAAABAABkAAAAEAAAAAABBABkAAAAEAAAAAABCABkAAAAEAAAAAABAABgAAAAEAAAAAABBABgAAAAEAAAAAABCABgAAAAEAAAAAABAABcAAAAEAAAAAABBABcAAAAEAAAAAABCABcAAAAEAAAAAABAABYAAAAEAAAAAABBABYAAAAEAAAAAABCABYAAAAEAAAAAABAABUAAAAEAAAAAABBABUAAAAEAAAAAABCABUAAAAEAAAAAABAABQAAAAEAAAAAABBABQAAAAEAAAAAABCABQAAAAEAAAAAABAABMAAAAEAAAAAABBABMAAAAEAAAAAABCABMAAAAEAAAAAABIABsAAAAEAAAAAABJABsAAAAEAAAAAABKABsAAAAEAAAAAABIABoAAAAEAAAAAABIABkAAAAEAAAAAABIABgAAAAEAAAAAABIABcAAAAEAAAAAABIABYAAAAEAAAAAABIABUAAAAEAAAAAABIABQAAAAEAAAAAABIABMAAAAEAAAAAABJABMAAAAEAAAAAABKABMAAAAEAAAAAABJABQAAAAEAAAAAABJABUAAAAEAAAAAABJABYAAAAEAAAAAABJABcAAAAEAAAAAABKABcAAAAEAAAAAABKABgAAAAEAAAAAABKABkAAAAEAAAAAABKABoAAAAEAAAAAABJABoAAAAEAAAAAABJABkAAAAEAAAAAABJABgAAAAEAAAAAABKABYAAAAEAAAAAABKABUAAAAEAAAAAABKABQAAAAEAAAAAABIABIAAAAEAAAAAABJABIAAAAEAAAAAABKABIAAAAEAAAAAABIABEAAAAEAAAAAABJABEAAAAEAAAAAABKABEAAAAEAAAAAABIABAAAAAEAAAAAABJABAAAAAEAAAAAABKABAAAAAEAAAAAABQABsAAAAEAAAAAABRABsAAAAEAAAAAABSABsAAAAEAAAAAABQABoAAAAEAAAAAABQABkAAAAEAAAAAABQABgAAAAEAAAAAABQABcAAAAEAAAAAABQABYAAAAEAAAAAABQABUAAAAEAAAAAABQABQAAAAEAAAAAABQABMAAAAEAAAAAABQABIAAAAEAAAAAABQABEAAAAEAAAAAABQABAAAAAEAAAAAABQAA8AAAAEAAAAAABRAA8AAAAEAAAAAABSAA8AAAAEAAAAAABSABAAAAAEAAAAAABRABAAAAAEAAAAAABSABEAAAAEAAAAAABSABIAAAAEAAAAAABRABMAAAAEAAAAAABRABQAAAAEAAAAAABRABUAAAAEAAAAAABRABYAAAAEAAAAAABRABcAAAAEAAAAAABRABgAAAAEAAAAAABRABkAAAAEAAAAAABRABoAAAAEAAAAAABSABoAAAAEAAAAAABSABkAAAAEAAAAAABSABgAAAAEAAAAAABSABcAAAAEAAAAAABSABYAAAAEAAAAAABSABUAAAAEAAAAAABSABQAAAAEAAAAAABSABMAAAAEAAAAAABRABEAAAAEAAAAAABRABIAAAAEAAAAAABMABkAAAAFAAMAAABMABoAAAAFAAQAAABMABsAAAAFAAUAAABOABkAAAAFAAMAAABOABoAAAAFAAQAAABOABsAAAAFAAUAAABEABkAAAAFAAMAAABEABoAAAAFAAQAAABEABsAAAAFAAUAAABGABkAAAAFAAMAAABGABoAAAAFAAQAAABGABsAAAAFAAUAAAA8ABkAAAAFAAMAAAA8ABoAAAAFAAQAAAA8ABsAAAAFAAUAAAA+ABkAAAAFAAMAAAA+ABoAAAAFAAQAAAA+ABsAAAAFAAUAAAA0ABkAAAAFAAMAAAA0ABoAAAAFAAQAAAA0ABsAAAAFAAUAAAA2ABkAAAAFAAMAAAA2ABoAAAAFAAQAAAA2ABsAAAAFAAUAAAA=")
tile_set = SubResource("TileSet_aosfd")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
texture_filter = 1
position = Vector2(535, 283)
script = ExtResource("2_s3831")

[node name="Coin_UI" parent="Player" instance=ExtResource("3_1o5tb")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -261.0
offset_top = 141.0
offset_right = -261.0
offset_bottom = 141.0
grow_horizontal = 1
grow_vertical = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(-260, 201)
sprite_frames = SubResource("SpriteFrames_tuhsn")
animation = &"jump"
autoplay = "idle"
frame = 2
frame_progress = 0.301394

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-260, 199)
shape = SubResource("CapsuleShape2D_lahxr")

[node name="Countdown" type="Label" parent="Player" groups=["countdown"]]
offset_left = -285.0
offset_top = 154.0
offset_right = -245.0
offset_bottom = 177.0
script = ExtResource("48_rrj8w")

[node name="Timer" type="Timer" parent="Player/Countdown"]

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-254, 186)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("49_s3831")

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(245, 398)
script = ExtResource("49_illia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(537, -61)
shape = SubResource("WorldBoundaryShape2D_qw00t")

[node name="Timer" type="Timer" parent="KillZone"]
wait_time = 3.0
one_shot = true

[node name="Coin" parent="." instance=ExtResource("50_yj85f")]
position = Vector2(870, 472)

[node name="Coin2" parent="." instance=ExtResource("50_yj85f")]
position = Vector2(999, 420)

[node name="Coin3" parent="." instance=ExtResource("50_yj85f")]
position = Vector2(1126, 374)

[node name="Coin4" parent="." instance=ExtResource("50_yj85f")]
position = Vector2(1255, 324)

[node name="Coin5" parent="." instance=ExtResource("50_yj85f")]
position = Vector2(1386, 306)

[node name="CanvasGameOver" type="CanvasLayer" parent="."]

[node name="GameOver" type="ColorRect" parent="CanvasGameOver"]
visible = false
offset_left = 718.0
offset_top = 361.0
offset_right = 1303.0
offset_bottom = 681.0
color = Color(0, 0, 0, 0.498039)
script = ExtResource("52_1o5tb")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGameOver/GameOver"]
layout_mode = 0
offset_top = 1.0
offset_right = 583.0
offset_bottom = 476.0

[node name="Label" type="Label" parent="CanvasGameOver/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasGameOver/GameOver"]
layout_mode = 0
offset_left = 140.0
offset_top = 191.0
offset_right = 432.0
offset_bottom = 294.0
theme_override_constants/separation = 100

[node name="RestartButton" type="Button" parent="CanvasGameOver/GameOver/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="MainMenuButton" type="Button" parent="CanvasGameOver/GameOver/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CanvasNextLevel" type="CanvasLayer" parent="."]

[node name="NextLevel" type="ColorRect" parent="CanvasNextLevel"]
visible = false
offset_left = 705.0
offset_top = 399.0
offset_right = 1475.0
offset_bottom = 759.0
color = Color(0, 0, 0, 0.686275)
script = ExtResource("53_h5nn7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasNextLevel/NextLevel"]
layout_mode = 0
offset_right = 769.0
offset_bottom = 69.0

[node name="Label" type="Label" parent="CanvasNextLevel/NextLevel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Level Complete"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasNextLevel/NextLevel"]
layout_mode = 0
offset_left = 14.0
offset_top = 227.0
offset_right = 779.0
offset_bottom = 356.0
theme_override_constants/separation = 450

[node name="RestartButton" type="Button" parent="CanvasNextLevel/NextLevel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="SelectLevelButton" type="Button" parent="CanvasNextLevel/NextLevel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Level"

[node name="Controller" type="Node2D" parent="."]
script = ExtResource("54_3k0a5")

[connection signal="timeout" from="Player/Countdown/Timer" to="Player/Countdown" method="_on_timer_timeout"]
[connection signal="body_entered" from="KillZone" to="KillZone" method="_on_body_entered"]
[connection signal="timeout" from="KillZone/Timer" to="KillZone" method="_on_timer_timeout"]
